@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-07T08:16:32Z",
+  "timestamp" : "2023-07-08T08:15:00Z",
   "count_outdated" : 128,
   "uniques_outdated" : 108,
-  "count" : 143,
-  "uniques" : 118,
+  "count" : 144,
+  "uniques" : 119,
   "clones" : [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2023-07-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
