@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 9,
   "clones": [
     {
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2023-07-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
