@@ -1,3 +1,12 @@
+2023-07-08T08:15:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5493483140 # 971
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
+* notice: last 14d: unq all: 9 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 118 143
+* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 119 144
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-08]
+
 2023-07-07T08:16:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5484289395 # 968
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-07
